--- a/Controle_Transfermarkt.ipynb
+++ b/Controle_Transfermarkt.ipynb
@@ -27,12 +27,14 @@
     "goal_events_df = pd.read_csv('csv/doelpunten_onverwerkd.csv')\n",
     "standings_df = pd.read_csv('csv/klassement_onverwerkd.csv')\n",
     "\n",
+    "#Filter voor valid goals\n",
     "goal_events_df = goal_events_df[goal_events_df['valid_goal'] == True]\n",
+    "\n",
     "# Filter of vervang niet-numerieke waarden\n",
     "match_results_df['doelpunten_thuisploeg'] = pd.to_numeric(match_results_df['doelpunten_thuisploeg'], errors='coerce').fillna(0)\n",
     "match_results_df['doelpunten_uitploeg'] = pd.to_numeric(match_results_df['doelpunten_uitploeg'], errors='coerce').fillna(0)\n",
     "\n",
-    "# Nu kunt u de conversie naar int veilig uitvoeren\n",
+    "# Conversie naar int\n",
     "match_results_df['doelpunten_thuisploeg'] = match_results_df['doelpunten_thuisploeg'].astype(int)\n",
     "match_results_df['doelpunten_uitploeg'] = match_results_df['doelpunten_uitploeg'].astype(int)"
    ],
@@ -99,7 +101,7 @@
     "    ~((merged_df['doelpunten_thuisploeg'] == 0) & (merged_df['doelpunten_uitploeg'] == 5))\n",
     "]\n",
     "\n",
-    "# Select only relevant columns for display - Lommel 2002, Excelsior 2009 verwijderen we alles van, matches, klassement en doelpunten\n",
+    "# Toon alle matches waarbij de berekende goals niet overeenkomen met echte - Lommel 2002, Excelsior 2009 verwijderen we alles van, matches, klassement en doelpunten\n",
     "discrepancies_goals.head(1000)"
    ],
    "metadata": {
@@ -147,6 +149,7 @@
     "    (merged_df['calculated_doelpunten_thuisploeg'] != merged_df['doelpunten_thuisploeg']) |\n",
     "    (merged_df['calculated_doelpunten_uitploeg'] != merged_df['doelpunten_uitploeg'])\n",
     "]\n",
+    "#Wordt gebruikt om manueel alle 5:0 of 0:5's te controleren aangezien het technisch gezien een echt resultaat kan zijn\n",
     "discrepancies_goals.head(1000)"
    ],
    "metadata": {
@@ -226,7 +229,7 @@
     }
    ],
    "source": [
-    "# geen records met standings_df.Played != (standings_df.Wins + standings_df.Losses + standings_df.Draws\n",
+    "# geen records met aantal wedstrijden != win + gelijk + verlies\n",
     "number_of_games_check = standings_df[standings_df.aantal_wedstrijden != (standings_df.aantal_gewonnen + standings_df.aantal_gelijk + standings_df.aantal_verloren)]\n",
     "number_of_games_check.count()"
    ],
@@ -252,7 +255,7 @@
     }
    ],
    "source": [
-    "# geen records met (uitslagen.doelpunten_voor - uitslagen.doelpunten_tegen) != (uitslagen.verschil)\n",
+    "# geen records met doelpunten voor - doelpunten tegen != doelpunten verschil\n",
     "standings_df['calculated_goal_verschil'] = standings_df['doelpunten_voor'] - standings_df['doelpunten_tegen']\n",
     "controle_aantal_wedstrijden = standings_df[standings_df['calculated_goal_verschil'] != standings_df['verschil']]\n",
     "controle_aantal_wedstrijden.count()"
@@ -298,6 +301,7 @@
     }
    ],
    "source": [
+    "#Controleer de punten, alle waarden voor 1960 herberekenen we later dus alles is goed\n",
     "points_df['punten_check'] = points_df['aantal_gewonnen'] * 3 + points_df['aantal_gelijk'] + points_df['aantal_verloren'] * 0\n",
     "discrepancies_df = points_df[points_df['punten'] != points_df['punten_check']]\n",
     "discrepancies_df.head(100)"
@@ -330,7 +334,7 @@
     "\n",
     "merged_df = pd.merge(goal_events_df, match_results_df, on='id_match', suffixes=('_goal', '_match'))\n",
     "\n",
-    "# Check for discrepancies in dates\n",
+    "# Check dat de goal datum de matchdatum match\n",
     "date_discrepancies_df = merged_df[merged_df['datum_goal'] != merged_df['datum_match']]\n",
     "date_discrepancies_df.head(30)"
    ],
@@ -401,7 +405,7 @@
     "grouped = sorted_dates.groupby(['seizoen', 'speeldag'])\n",
     "date_order_check = grouped['datum'].apply(lambda x: x.is_monotonic_increasing)\n",
     "\n",
-    "# Identifying seasons and days where dates are not in chronological order\n",
+    "# Alle seizoenen hebben de datum in chronologische orde\n",
     "date_discrepancies = date_order_check[date_order_check == False]\n",
     "date_discrepancies.head(30)"
    ],
@@ -428,13 +432,12 @@
     }
    ],
    "source": [
-    "# Filter matches that ended 0-0\n",
+    "# Filter matches met 0-0\n",
     "matches_0_0 = match_results_df[(match_results_df['doelpunten_thuisploeg'] == 0) & (match_results_df['doelpunten_uitploeg'] == 0)]\n",
     "\n",
-    "# Get match_ids of 0-0 matches\n",
     "match_ids_0_0 = matches_0_0['id_match']\n",
     "\n",
-    "# Check if these matches have any goals in goal_events.csv\n",
+    "# Check dat deze matches oprecht geen goals hebben\n",
     "goals_in_0_0_matches = goal_events_df[goal_events_df['id_match'].isin(match_ids_0_0)]\n",
     "goals_in_0_0_matches.head(100)"
    ],
@@ -469,6 +472,7 @@
     "standings_df['calculated_goal_verschil'] = pd.to_numeric(standings_df['calculated_goal_verschil'], errors='coerce')\n",
     "standings_df['doelpunten_voor'] = pd.to_numeric(standings_df['doelpunten_voor'], errors='coerce')\n",
     "\n",
+    "#Bereken twee punten systeem\n",
     "def calculate_two_point_system_left(row):\n",
     "    return 2 * row['aantal_gewonnen'] + 1 * row['aantal_gelijk']\n",
     "\n",
@@ -506,8 +510,7 @@
     "# Controleer op discrepanties voor alle seizoenen\n",
     "discrepancies_standing = all_seasons_ranked[all_seasons_ranked['stand'] != all_seasons_ranked['calculated_rank']]\n",
     "\n",
-    "#De huidige errors hebben te maken met verwijderde data maar in het algemeen kloppen\n",
-    "\n",
+    "#De huidige errors hebben te maken met verwijderde data dat wij anders aanpakte dan de website. het resultaat klopt dus.\n",
     "discrepancies_standing.head(1000)"
    ],
    "metadata": {
@@ -533,7 +536,7 @@
     }
    ],
    "source": [
-    "# Toon de eerste 10 rijen om te controleren\n",
+    "# Toon de eerste 10 rijen om te controleren manueel\n",
     "standings_df.head(30)"
    ],
    "metadata": {
@@ -588,6 +591,7 @@
    "execution_count": 1448,
    "outputs": [],
    "source": [
+    "#Exporteer het doelpunten bestand in het gewenste formaat\n",
     "goal_events_export_df = pd.read_csv('csv/doelpunten_onverwerkd.csv')\n",
     "goal_events_export_df = goal_events_export_df[goal_events_export_df['valid_goal'] == True]\n",
     "goal_events_export_df['stand_thuis'] = goal_events_export_df['stand_thuis'].astype(int)\n",
@@ -613,6 +617,7 @@
    "execution_count": 1449,
    "outputs": [],
    "source": [
+    "#Exporteer het wedstrijden bestand in het gewenste formaat\n",
     "match_results_export_df = pd.read_csv('csv/wedstrijden_onverwerkd.csv')\n",
     "match_results_export_df['tijd'] = pd.to_datetime(match_results_export_df['tijd'], format='%H:%M:%S')\n",
     "match_results_export_df['tijd'] = match_results_export_df['tijd'].dt.strftime('%H:%M')\n",
