tabel headers aangepast

--- a/bulk_insert_data.ipynb
+++ b/bulk_insert_data.ipynb
@@ -1837,17 +1837,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dim_team_df\n",
-    "dim_date_df\n",
-    "dim_time_df\n",
-    "dim_standings_df\n",
-    "fact_table_match\n",
-    "dim_goal_df\n",
-    "fact_table_bet"
+    "dim_team_df.to_csv('csv/bulk_voor_sql/dim_team.csv',index=False)\n",
+    "dim_date_df.to_csv('csv/bulk_voor_sql/dim_date.csv',index=False)\n",
+    "dim_time_df.to_csv('csv/bulk_voor_sql/dim_time.csv',index=False)\n",
+    "dim_standings_df.to_csv('csv/bulk_voor_sql/dim_standings.csv',index=False)\n",
+    "fact_table_match.to_csv('csv/bulk_voor_sql/fact_match.csv',index=False)\n",
+    "dim_goal_df.to_csv('csv/bulk_voor_sql/dim_goal.csv',index=False)\n",
+    "#fact_table_bet.to_csv('csv/bulk_voor_sql/fact_bet.csv',index=False)"
    ]
   }
  ],
